RESOLVED FIXED69551
CSS 2.1 failure: border-conflict-style-079
https://bugs.webkit.org/show_bug.cgi?id=69551
Summary CSS 2.1 failure: border-conflict-style-079
Robert Hogan
Reported 2011-10-06 12:10:19 PDT
Fails with red border in centre
Attachments
Patch (171.18 KB, patch)
2011-10-06 12:49 PDT, Robert Hogan
no flags
Patch (184.22 KB, patch)
2011-10-06 13:17 PDT, Robert Hogan
no flags
Patch (28.99 KB, patch)
2011-10-06 14:51 PDT, Robert Hogan
tonikitoo: review+
Robert Hogan
Comment 1 2011-10-06 12:49:40 PDT
WebKit Review Bot
Comment 2 2011-10-06 13:15:54 PDT
Comment on attachment 109997 [details] Patch Attachment 109997 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9964389 New failing tests: fast/table/border-collapsing/002-vertical.html tables/mozilla/collapsing_borders/bug41262-3.html fast/table/border-collapsing/002.html
Robert Hogan
Comment 3 2011-10-06 13:17:42 PDT
WebKit Review Bot
Comment 4 2011-10-06 14:11:04 PDT
Comment on attachment 110004 [details] Patch Attachment 110004 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9976328 New failing tests: fast/table/border-collapsing/002-vertical.html tables/mozilla/collapsing_borders/bug41262-3.html fast/table/border-collapsing/002.html
Robert Hogan
Comment 5 2011-10-06 14:51:04 PDT
Robert Hogan
Comment 6 2011-10-12 11:31:01 PDT
Note You need to log in before you can comment on or make changes to this bug.