CSS 2.1 failure: border-conflict-style-079 https://bugs.webkit.org/show_bug.cgi?id=69551

Reviewed by Antonio Gomes.

Source/WebCore:

* css/CSSValueKeywords.in: ridge and outset were the wrong way round
* rendering/style/RenderStyleConstants.h: ditto

LayoutTests:

* css2.1/20110323/border-conflict-style-079.htm: Added.
* css2.1/20110323/border-conflict-style-088.htm: Added.
* platform/chromium-linux/css2.1/20110323/border-conflict-style-079-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/border-conflict-style-079-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/border-conflict-style-088-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/border-conflict-style-088-expected.txt: Added.

Canonical link: https://commits.webkit.org/86009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97278 268f45cc-cd09-0410-ab3c-d52691b4dbfc